--- a/app/src/main/res/layout/activity_folder_browser.xml
+++ b/app/src/main/res/layout/activity_folder_browser.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:visibility="@{safeUnbox(isLoading) ? View.GONE : View.VISIBLE}"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             android:layout_width="match_parent"
