--- a/app/src/main/res/layout/activity_folder_browser.xml
+++ b/app/src/main/res/layout/activity_folder_browser.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/main_list_view_upload_here_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
