--- a/app/src/main/res/layout/fragment_devices.xml
+++ b/app/src/main/res/layout/fragment_devices.xml
@@ -32,7 +32,7 @@
             android:textSize="20sp"
             android:visibility="@{safeUnbox(isEmpty) ? View.VISIBLE : View.GONE}" />
 
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_device"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
