--- a/app/src/main/res/layout/listview_device.xml
+++ b/app/src/main/res/layout/listview_device.xml
@@ -29,8 +29,7 @@
             android:id="@+id/device_icon"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            tools:src="@drawable/ic_laptop_green_24dp"
-            app:srcCompat="@{safeUnbox(isConnected) ? @drawable/ic_laptop_green_24dp : @drawable/ic_laptop_red_24dp}" />
+            tools:src="@drawable/ic_laptop_green_24dp" />
 
         <View
             android:layout_width="16dp"
