--- a/app/src/main/res/layout/listview_device.xml
+++ b/app/src/main/res/layout/listview_device.xml
@@ -30,7 +30,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             tools:src="@drawable/ic_laptop_green_24dp"
-            app:srcCompat="@{safeUnbox(isConnected) ? @drawable/ic_laptop_green_24dp : @drawable/ic_laptop_red_24dp}" />
+            android:src="@{safeUnbox(isConnected) ? @drawable/ic_laptop_green_24dp : @drawable/ic_laptop_red_24dp}" />
 
         <View
             android:layout_width="16dp"
@@ -62,5 +62,4 @@
         </LinearLayout>
 
     </LinearLayout>
-
 </layout>
