--- a/app/src/main/res/layout/activity_folder_browser.xml
+++ b/app/src/main/res/layout/activity_folder_browser.xml
@@ -16,7 +16,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:visibility="@{safeUnbox(isLoading) ? View.GONE : View.VISIBLE}"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/list_view" />
