--- a/app/src/main/res/layout/listview_device.xml
+++ b/app/src/main/res/layout/listview_device.xml
@@ -56,7 +56,7 @@
 
             <TextView
                 android:text="@{status}"
-                tools:text="Trying to connect to 127.0.0.1 ..."
+                tools:text="Trying to connect to 127.0.0.1 …"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
