--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
 
     <style name="Theme.Syncthing.Intro" parent="@style/Theme.Syncthing.NoActionBar">
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:windowBackground">@color/primary_intro</item>
     </style>
 
 </resources>
