--- a/app/src/main/res/drawable/intro_button_background.xml
+++ b/app/src/main/res/drawable/intro_button_background.xml
@@ -1,21 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <solid android:color="#40FFFFFF"/>
-            <corners android:radius="4dp"/>
-        </shape>
-    </item>
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <solid android:color="#20FFFFFF"/>
-            <corners android:radius="4dp"/>
+            <solid android:color="#AA880000" />
+            <corners android:radius="12dp" />
+            <stroke android:width="2dp" android:color="#66FFFFFF" />>
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#30FFFFFF"/>
-            <corners android:radius="4dp"/>
+            <solid android:color="@color/primary_dark" />
+            <corners android:radius="12dp" />
+            <stroke android:width="2dp" android:color="@android:color/white" />
         </shape>
     </item>
 </selector>
