--- a/app/src/main/res/layout/dialog_edit_device.xml
+++ b/app/src/main/res/layout/dialog_edit_device.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Device ID:"
+        android:text="@string/device_id"
         android:textStyle="bold"
         android:layout_marginBottom="8dp" />
 
