--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -9,6 +9,7 @@
     <locale android:name="ja" />
     <locale android:name="nl" />
     <locale android:name="nl-rBE" />
+    <locale android:name="pl" />
     <locale android:name="pt" />
     <locale android:name="pt-rBR" />
     <locale android:name="pt-rPT" />
